--- a/openglportable-64bit/openglportable/openglportable.cbp
+++ b/openglportable-64bit/openglportable/openglportable.cbp
@@ -14,6 +14,7 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="../freeglut/include" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add library="freeglut" />
@@ -29,6 +30,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -39,7 +41,15 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/Railline.h" />
+		<Unit filename="include/Road.h" />
+		<Unit filename="include/Sky.h" />
+		<Unit filename="include/Train.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/Railline.cpp" />
+		<Unit filename="src/Road.cpp" />
+		<Unit filename="src/Sky.cpp" />
+		<Unit filename="src/Train.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
